# monty

./: CMakeLists.txt  README.md  add_num.bf  add_user_input.c  builtin_functions1.c  builtin_functions2.c  builtin_functions3.c  execute_command.c  free_all_info.c  get_builtin_function.c  monty  monty.c  monty.h  parse_read.c  read_file.c  remove_whitespace.c  run.sh  string_functions.c  string_functions1.c  string_functions2.c
bf/: 1000-school.bf  1001-add.bf  1002-mul.bf  1003-mul.bf  hello_world.bf
bytecodes/: 000.m  001.m  test_1_1.m
scratch/: 1  1.c  main  main.c
